test: refact